Add tag/category search links
